[package]
name = "quant-rs"
version = "0.1.0"
edition = "2021"
authors = ["你的名字 <you@example.com>"]
description = "A modular event-driven quantitative trading system in Rust"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }

crossbeam = "0.8"

log = "0.4"
env_logger = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

csv = "1.3"

chrono = { version = "0.4", features = ["serde"] }

parking_lot = "0.12"

uuid = { version = "1", features = ["v4", "serde"] }

config = "0.13"

anyhow = "1.0"
thiserror = "1.0"
